bk_ida/gobmkida/c1/set_handicap_spots
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:586:12: error: array type 'char [19]' is not assignable
hspots[20] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:587:12: error: array type 'char [19]' is not assignable
hspots[58] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:588:12: error: array type 'char [19]' is not assignable
hspots[22] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:589:12: error: array type 'char [19]' is not assignable
hspots[60] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:590:12: error: array type 'char [19]' is not assignable
hspots[40] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:599:12: error: array type 'char [19]' is not assignable
hspots[60] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:602:1: error: use of undeclared identifier 'byte_B5B03F'
byte_B5B03F[2 * v6 + boardsize] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:603:24: error: array type 'char [19]' is not assignable
hspots[boardsize + 53] = 43; 
~~~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:604:1: error: use of undeclared identifier 'byte_B5B03C'
byte_B5B03C[boardsize + v7] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:606:17: error: array type 'char [19]' is not assignable
hspots[v8 + 57] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:608:35: error: array type 'char [19]' is not assignable
hspots[19 * ( boardsize / 2) + 3] = 43; 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:609:1: error: use of undeclared identifier 'byte_B5B03C'
byte_B5B03C[boardsize + v9] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:610:17: error: array type 'char [19]' is not assignable
hspots[v8 + v7] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:611:17: error: array type 'char [19]' is not assignable
hspots[v8 + v9] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:615:12: error: array type 'char [19]' is not assignable
hspots[40] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:618:17: error: array type 'char [19]' is not assignable
hspots[v2 + 38] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:619:17: error: array type 'char [19]' is not assignable
hspots[v2 + v4] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:620:31: error: array type 'char [19]' is not assignable
hspots[20 * ( boardsize / 2)] = 43; 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:625:12: error: array type 'char [19]' is not assignable
hspots[60] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:627:1: error: use of undeclared identifier 'byte_B5B03F'
byte_B5B03F[2 * v5 + boardsize] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:628:24: error: array type 'char [19]' is not assignable
hspots[boardsize + 53] = 43; 
~~~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:629:1: error: use of undeclared identifier 'byte_B5B03C'
byte_B5B03C[2 * v5 - 4 + boardsize + boardsize] = 43; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:633:12: error: array type 'char [19]' is not assignable
hspots[40] = 43; 
~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:635:16: error: array type 'char [19]' is not assignable
hspots[v3 + 2] = 43; 
~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:636:17: error: array type 'char [19]' is not assignable
hspots[v2 + 38] = 43; 
~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/interface/play_ascii.c:637:17: error: array type 'char [19]' is not assignable
hspots[v2 + v3] = 43; 
~~~~~~~~~~~~~~~ ^
26 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/set_handicap_spots/src/obj/2/play_ascii.o] Error 1
